--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -190,11 +190,8 @@
                 </div>
             </div>
         </div>
-    </div>
-    {# --- END CARD 2 --- #}
 
-    {# --- ADD BUSINESS LINE ACCORDION --- #}
-    <div class="col-md-4 mb-4">
+        {# --- CARD 3: Business Line Accordion --- #}
         <div class="card">
             <div class="card-header"><h2>Total Check-ins by Business Line</h2></div> {# Title is now white #}
             <div class="card-body">
@@ -237,7 +234,7 @@
             </div>
         </div>
     </div>
-    {# --- END BUSINESS LINE ACCORDION --- #}
+    {# --- END CARD 2 --- #}
 
     {# --- All Records Table --- #}
     <div class="row">
