style: Apply custom styling to admin dashboard (bg color, red headers)

--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -190,8 +190,11 @@
                 </div>
             </div>
         </div>
+    </div>
+    {# --- END CARD 2 --- #}
 
-        {# --- CARD 3: Business Line Accordion --- #}
+    {# --- ADD BUSINESS LINE ACCORDION --- #}
+    <div class="col-md-4 mb-4">
         <div class="card">
             <div class="card-header"><h2>Total Check-ins by Business Line</h2></div> {# Title is now white #}
             <div class="card-body">
@@ -234,7 +237,7 @@
             </div>
         </div>
     </div>
-    {# --- END CARD 2 --- #}
+    {# --- END BUSINESS LINE ACCORDION --- #}
 
     {# --- All Records Table --- #}
     <div class="row">
